[package]
name = "raft"
version = "0.7.1"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/yolmio/raft-rs"
readme = "README.md"
homepage = "https://github.com/yolmio/raft-rs"
documentation = "https://docs.rs/raft"
description = "The rust language implementation of Raft algorithm."
categories = ["algorithms", "database-implementations"]
edition = "2021"

[workspace]
members = ["proto", "harness", "datadriven"]

[features]
default = ["prost-codec", "default-logger"]
# Enable failpoints
failpoints = ["fail/failpoints"]
prost-codec = ["raft-proto/prost-codec", "bytes"]
default-logger = ["slog-stdlog", "slog-envlogger", "slog-term"]

# Make sure to synchronize updates with Harness.
[dependencies]
bytes = { version = "1", optional = true }
rustc-hash = "2"
fail = { version = "0.5", optional = true }
getset = "0.1"
prost = "0.14"
thiserror = "2"
raft-proto = { path = "proto", version = "0.7.1", default-features = false }
rand = "0.9"
slog = "2.7"
slog-envlogger = { version = "2.2", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-term = { version = "2.9", optional = true }

[dev-dependencies]
criterion = "0.8"
regex = "1"
slog-async = "2.8"
slog-envlogger = "2.2"
slog-stdlog = "4"
slog-term = "2.9"
anyhow = "1"
datadriven = { path = "datadriven", version = "0.1.0" }
itertools = "0.14"

[[bench]]
name = "benches"
harness = false

[[example]]
name = "single_mem_node"
path = "examples/single_mem_node/main.rs"

[[example]]
name = "five_mem_node"
path = "examples/five_mem_node/main.rs"
