[package]
name = "harness"
version = "0.1.0"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = []
repository = "https://github.com/yolmio/raft-rs/harness"
readme = "README.md"
homepage = "https://github.com/yolmio/raft-rs/harness"
description = "A testing harness for Raft."
categories = []
edition = "2021"

[features]
default = ["prost-codec", "raft/default-logger"]
# Enable failpoints
failpoints = ["fail/failpoints"]
prost-codec = ["raft/prost-codec"]

# Make sure to synchronize updates with Raft.
[dependencies]
raft = { path = "..", default-features = false }
raft-proto = { path = "../proto", default-features = false }
fail = { version = "0.5", optional = true }
rand = "0.9"
slog = "2.8"
prost = "0.14"

[dev-dependencies]
criterion = "0.8"
rustc-hash = "2"
lazy_static = "1"
regex = "1"
