[package]
name = "raft-proto"
version = "0.7.1"
authors = ["The TiKV Project Developers"]
edition = "2021"
license = "Apache-2.0"
keywords = ["raft", "distributed-systems", "ha"]
repository = "https://github.com/yolmio/raft-rs"
homepage = "https://github.com/yolmio/raft-rs"
documentation = "https://docs.rs/raft-proto"
description = "Protocol definitions for the rust language implementation of the Raft algorithm."
categories = ["algorithms", "database-implementations"]
build = "build.rs"

[features]
default = ["prost-codec"]
prost-codec = ["prost", "bytes"]

[build-dependencies]
prost-build = "0.14"

[dependencies]
bytes = { version = "1", optional = true }
prost = { version = "0.14", optional = true }
lazy_static = "1"
